# browser_pilot

./: .gitignore  .pre-commit-config.yaml  README.md  api.py  env_var.sh  pyproject.toml  requirements.txt  run_tests  test_worker_comm.py  test_worker_comm1.py  test_zmq.py  worker.py  worker1.py  worker_client.py  worker_client1.py
benchmark/: analyze.ipynb  analyze.py  benchmark_server_v1.py  benchmark_server_v2.py  launch_browser.py  launch_browserless.py  multi_process_run copy.py  multi_process_run.py  multi_process_run_new.py  multiprocess_async_cdp.py  multiprocess_async_cdp_ind.py  multiprocess_async_playwright.py  multiprocess_async_playwright_server.py  multiprocess_async_playwright_server_ind.py  multiprocess_async_playwright_server_seq.py  multiprocess_async_worker.py  multiprocess_sync.py  multiprocess_sync_playwright.py
browser_pilot/: proxy.py  utils.py  worker.py  worker_client.py
scripts/: config.yaml  launch_all.py  launch_server.py
src/: api.py  async_engine.py  async_engine_v2.py  cloud_client.py  cloud_env.py  engine.py  monitor.py  monitor_store.py  parallel_run  proxy.py  proxy_multiplex.py  roundrobin_scheduler.py  schedular_output.py  scheduler.py  serializer.py  task_tracker.py  util.py  utils.py  worker.py  worker_client.py  worker_old.py
tests/: test_api_core.py  test_api_mcp.py  test_async_worker.py  test_browser_concurrent.py  test_dealer_router.py  test_engine.py  test_monitor_accuracy.py  test_monitor_core.py  test_playwright.py  test_profiling.py  test_proxy.py  test_scheduler.py  test_server_v1.py  test_worker_client_comm.py  (+3 more)
(+95 files in other folders)
