# pyproject.toml

[build-system]
# Specifies that setuptools is needed to build the project
requires = ["setuptools>=61.0"]
# Specifies the function setuptools uses to build the project
build-backend = "setuptools.build_meta"

[project]
name = "browser_pilot"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
